--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,40 @@
 ---
-layout: default
-title: Neat Starter
+layout: landing
+title: Joe Kaiser
 path: home
 ---
 
 <div class="container mx-auto lg:h-screen flex flex-col justify-center items-center">
   <h1>
-    Welcome to
-    <strong class="bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
-      {{title}}
-    </strong>
+    Welcome
   </h1>
+  <div >
 
-  <p>
-    <abbr title="netlify cms, eleventy, alpine js & tailwind css">NEAT</abbr>
-    Starter Template. Get Started by editing.
-    <code class="bg-gray-100 text-blue-800 p-1">/index.njk</code>
+    <p> I build frontend stuff, backend stuff, database stuff, and sometimes other stuff.
+  </div>
+
   </p>
 
-  {% include "./_includes/partials/content.html" %}
+  <!-- {% include "./_includes/partials/content.html" %} -->
+  <div class="w-full max-w-2xl grid grid-cols-1 lg:grid-cols-2 gap-4 my-8 px-4 lg:mx-0" >
+
+    {% if quicklinks.links %}
+
+        {% for item in quicklinks.links %}
+            <a href="{{item.url}}" class="p-5 border rounded border-gray-200 hover:border-teal-600">
+              <!-- <strong class="bg-clip-text text-transparent bg-gradient-to-r from-teal-500 to-purple-500">
+                {{item.title}}
+              </strong> -->
+              <h3 class="text-teal-600">
+                {{item.title}}
+              </h3>
+                <!-- <h3>{{item.title}}</h3> -->
+                <p>{{item.desc}}</p>
+            </a>
+        {% endfor %}
+
+    {% endif %}
+
+</div>
+
 </div>
