--- a/src/whoami.html
+++ b/src/whoami.html
@@ -4,23 +4,26 @@ layout: default
 ---
 
 <div class="container max-w-3xl mt-6 px-6">
-    <!-- <h1 class="font-bold text-5xl">Hi, I'm Joe!</h1> -->
+    <h1 class="font-bold text-5xl">Hi, I'm Joe!</h1>
 
     <div
-        class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6"
+        class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl  md:grid md:grid-cols-2 sm:py-16 lg:px-6"
     >
         <img class="w-full border-gray-300 border" src="/static/img/profile-book.jpg" />
         <div class="mt-4 md:mt-0 prose">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold">
+            <!-- <h2 class="mb-4 text-4xl tracking-tight font-extrabold">
                 Hi, I'm Joe!
-            </h2>
-            <p class="mb-6">
-                I am what some people call a self sufficient "full stack developer". I know my way
-                around data modeling, database tuning, scale-able architecture, frontend code,
-                service design, and performance.
+            </h2> -->
+            <p>
+                I've spent the majority of my career working at startups, and as a result I've
+                picked up quite a few skills. I guess you could call me a "full stack" developer.
             </p>
-            <p>My passion is building a product, solving problems, and mentoring young engineers.</p>
 
+            <p>
+                I know my way around data modeling, database tuning, scale-able architecture,
+                frontend code, service design, performance, and cloud architecture to name a few.
+            </p>
+            <p>My passions are building a product, solving problems, and mentoring.</p>
         </div>
     </div>
 </div>
