adjust title padding

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ path: home
   </h1>
   <div >
 
-    <p class="my-2"> I build frontend stuff, backend stuff, database stuff, and sometimes other stuff.
+    <p class="px-4"> I build frontend stuff, backend stuff, database stuff, and sometimes other stuff.
   </div>
 
   </p>
